--- a/src/sample/EditProject.fxml
+++ b/src/sample/EditProject.fxml
@@ -23,7 +23,7 @@
                   <Button fx:id="createProjectButton" layoutX="425.0" layoutY="197.0" mnemonicParsing="false" onAction="#createProject" text="Создать проект" />
                   <Button fx:id="selectProjectButton" layoutX="423.0" layoutY="231.0" mnemonicParsing="false" onAction="#selectProject" text="Выбрать проект" />
                   <TextField fx:id="createProjectTextField" layoutX="543.0" layoutY="197.0" prefHeight="25.0" prefWidth="177.0" promptText="Название проекта" visible="false" />
-                  <Button fx:id="addProjectButton" layoutX="728.0" layoutY="197.0" mnemonicParsing="false" onAction="#addProject" text="+" visible="false" />
+                  <Button fx:id="addProjectButton" layoutX="728.0" layoutY="197.0" mnemonicParsing="false" onAction="#addProject" text="Создать" visible="false" />
                   <Button fx:id="startProject" layoutX="728.0" layoutY="231.0" mnemonicParsing="false" text="Выбрать" visible="false" />
                   <Button fx:id="deleteProjectButton" layoutX="730.0" layoutY="273.0" mnemonicParsing="false" onAction="#deleteElementProject" text="Удалить" visible="false" />
                   <TableView fx:id="projectTableView" layoutX="543.0" layoutY="231.0" prefHeight="200.0" prefWidth="177.0" visible="false">
@@ -263,7 +263,7 @@
                                                       <TableColumn fx:id="colPaidMaterialFloor" prefWidth="85.0" text="Оплачено" />
                                                       <TableColumn fx:id="colResidueMaterialFloor" prefWidth="85.0" text="Остаток" />
                                                       <TableColumn fx:id="colDateOfDeliveryMaterialFloor" prefWidth="85.0" text="Дата поставки" />
-                                                       <TableColumn fx:id="colNameRoomMaterialFloor" prefWidth="85.0" text="Наименование помещения"/>
+                                                      <TableColumn fx:id="colNameRoomMaterialFloor" prefWidth="85.0" text="Наименование помещения"/>
                                                       <TableColumn fx:id="colPlannedCPMaterialFloor" prefWidth="85.0" text="КП плановое" />
                                                       <TableColumn fx:id="colActualCPMaterialFloor" prefWidth="85.0" text="КП фактическое" />
                                                       <TableColumn fx:id="colAccountMaterialFloor" prefWidth="55.0" text="Счет" />
@@ -308,7 +308,7 @@
                                                       <TableColumn fx:id="colPaidMaterialCeiling" prefWidth="85.0" text="Оплачено" />
                                                       <TableColumn fx:id="colResidueMaterialCeiling" prefWidth="85.0" text="Остаток" />
                                                       <TableColumn fx:id="colDateOfDeliveryMaterialCeiling" prefWidth="85.0" text="Дата поставки" />
-                                                       <TableColumn fx:id="colNameRoomMaterialCeiling" prefWidth="85.0" text="Наименование помещения"/>
+                                                      <TableColumn fx:id="colNameRoomMaterialCeiling" prefWidth="85.0" text="Наименование помещения"/>
                                                       <TableColumn fx:id="colPlannedCPMaterialCeiling" prefWidth="85.0" text="КП плановое" />
                                                       <TableColumn fx:id="colActualCPMaterialCeiling" prefWidth="85.0" text="КП фактическое" />
                                                       <TableColumn fx:id="colAccountMaterialCeiling" prefWidth="55.0" text="Счет" />
@@ -353,7 +353,7 @@
                                                       <TableColumn fx:id="colPaidMaterialOther" prefWidth="85.0" text="Оплачено" />
                                                       <TableColumn fx:id="colResidueMaterialOther" prefWidth="85.0" text="Остаток" />
                                                       <TableColumn fx:id="colDateOfDeliveryMaterialOther" prefWidth="85.0" text="Дата поставки" />
-                                                       <TableColumn fx:id="colNameRoomMaterialOther" prefWidth="85.0" text="Наименование помещения"/>
+                                                      <TableColumn fx:id="colNameRoomMaterialOther" prefWidth="85.0" text="Наименование помещения"/>
                                                       <TableColumn fx:id="colPlannedCPMaterialOther" prefWidth="85.0" text="КП плановое" />
                                                       <TableColumn fx:id="colActualCPMaterialOther" prefWidth="85.0" text="КП фактическое" />
                                                       <TableColumn fx:id="colAccountMaterialOther" prefWidth="55.0" text="Счет" />
@@ -398,7 +398,7 @@
                                                       <TableColumn fx:id="colPaidMaterialSuddenly" prefWidth="85.0" text="Оплачено" />
                                                       <TableColumn fx:id="colResidueMaterialSuddenly" prefWidth="85.0" text="Остаток" />
                                                       <TableColumn fx:id="colDateOfDeliveryMaterialSuddenly" prefWidth="85.0" text="Дата поставки" />
-                                                       <TableColumn fx:id="colNameRoomMaterialSuddenly" prefWidth="85.0" text="Наименование помещения"/>
+                                                      <TableColumn fx:id="colNameRoomMaterialSuddenly" prefWidth="85.0" text="Наименование помещения"/>
                                                       <TableColumn fx:id="colPlannedCPMaterialSuddenly" prefWidth="85.0" text="КП плановое" />
                                                       <TableColumn fx:id="colActualCPMaterialSuddenly" prefWidth="85.0" text="КП фактическое" />
                                                       <TableColumn fx:id="colAccountMaterialSuddenly" prefWidth="55.0" text="Счет" />
@@ -476,7 +476,7 @@
                                                       <TableColumn fx:id="colPaidAppliancesKitchen" prefWidth="85.0" text="Оплачено" />
                                                       <TableColumn fx:id="colResidueAppliancesKitchen" prefWidth="85.0" text="Остаток" />
                                                       <TableColumn fx:id="colDateOfDeliveryAppliancesKitchen" prefWidth="85.0" text="Дата поставки" />
-                                                       <TableColumn fx:id="colNameRoomAppliancesKitchen" prefWidth="85.0" text="Наименование помещения"/>
+                                                      <TableColumn fx:id="colNameRoomAppliancesKitchen" prefWidth="85.0" text="Наименование помещения"/>
                                                       <TableColumn fx:id="colPlannedCPAppliancesKitchen" prefWidth="85.0" text="КП плановое" />
                                                       <TableColumn fx:id="colActualCPAppliancesKitchen" prefWidth="85.0" text="КП фактическое" />
                                                       <TableColumn fx:id="colAccountAppliancesKitchen" prefWidth="55.0" text="Счет" />
@@ -521,7 +521,7 @@
                                                       <TableColumn fx:id="colPaidAppliancesOther" prefWidth="85.0" text="Оплачено" />
                                                       <TableColumn fx:id="colResidueAppliancesOther" prefWidth="85.0" text="Остаток" />
                                                       <TableColumn fx:id="colDateOfDeliveryAppliancesOther" prefWidth="85.0" text="Дата поставки" />
-                                                       <TableColumn fx:id="colNameRoomAppliancesOther" prefWidth="85.0" text="Наименование помещения"/>
+                                                      <TableColumn fx:id="colNameRoomAppliancesOther" prefWidth="85.0" text="Наименование помещения"/>
                                                       <TableColumn fx:id="colPlannedCPAppliancesOther" prefWidth="85.0" text="КП плановое" />
                                                       <TableColumn fx:id="colActualCPAppliancesOther" prefWidth="85.0" text="КП фактическое" />
                                                       <TableColumn fx:id="colAccountAppliancesOther" prefWidth="55.0" text="Счет" />
@@ -566,7 +566,7 @@
                                                       <TableColumn fx:id="colPaidAppliancesDelivery" prefWidth="85.0" text="Оплачено" />
                                                       <TableColumn fx:id="colResidueAppliancesDelivery" prefWidth="85.0" text="Остаток" />
                                                       <TableColumn fx:id="colDateOfDeliveryAppliancesDelivery" prefWidth="85.0" text="Дата поставки" />
-                                                       <TableColumn fx:id="colNameRoomAppliancesDelivery" prefWidth="85.0" text="Наименование помещения"/>
+                                                      <TableColumn fx:id="colNameRoomAppliancesDelivery" prefWidth="85.0" text="Наименование помещения"/>
                                                       <TableColumn fx:id="colPlannedCPAppliancesDelivery" prefWidth="85.0" text="КП плановое" />
                                                       <TableColumn fx:id="colActualCPAppliancesDelivery" prefWidth="85.0" text="КП фактическое" />
                                                       <TableColumn fx:id="colAccountAppliancesDelivery" prefWidth="55.0" text="Счет" />
@@ -611,7 +611,7 @@
                                                       <TableColumn fx:id="colPaidAppliancesSuddenly" prefWidth="85.0" text="Оплачено" />
                                                       <TableColumn fx:id="colResidueAppliancesSuddenly" prefWidth="85.0" text="Остаток" />
                                                       <TableColumn fx:id="colDateOfDeliveryAppliancesSuddenly" prefWidth="85.0" text="Дата поставки" />
-                                                       <TableColumn fx:id="colNameRoomAppliancesSuddenly" prefWidth="85.0" text="Наименование помещения"/>
+                                                      <TableColumn fx:id="colNameRoomAppliancesSuddenly" prefWidth="85.0" text="Наименование помещения"/>
                                                       <TableColumn fx:id="colPlannedCPAppliancesSuddenly" prefWidth="85.0" text="КП плановое" />
                                                       <TableColumn fx:id="colActualCPAppliancesSuddenly" prefWidth="85.0" text="КП фактическое" />
                                                       <TableColumn fx:id="colAccountAppliancesSuddenly" prefWidth="55.0" text="Счет" />
@@ -646,12 +646,9 @@
             <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                     <children>
-                        <TableView layoutX="30.0" layoutY="86.0" prefHeight="200.0" prefWidth="536.0">
+                        <TableView fx:id="testTableView" layoutX="30.0" layoutY="86.0" prefHeight="200.0" prefWidth="536.0">
                             <columns>
-                                <TableColumn prefWidth="75.0" text="C1" />
-                                <TableColumn prefWidth="75.0" text="C2" />
-                                <TableColumn prefWidth="75.0" text="C2" />
-                                <TableColumn prefWidth="75.0" text="C2" />
+                                <TableColumn fx:id="colTest" prefWidth="75.0" text="Тест" />
                             </columns>
                         </TableView>
                     </children>
