--- a/src/sample/EditProject.fxml
+++ b/src/sample/EditProject.fxml
@@ -16,25 +16,6 @@
 
 <TabPane fx:id="tabPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.EditProjectController">
     <tabs>
-      <Tab fx:id="fileView" text="Файл">
-         <content>
-            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200">
-               <children>
-                  <Button fx:id="createProjectButton" layoutX="425.0" layoutY="197.0" mnemonicParsing="false" onAction="#createProject" text="Создать проект" />
-                  <Button fx:id="selectProjectButton" layoutX="423.0" layoutY="231.0" mnemonicParsing="false" onAction="#selectProject" text="Выбрать проект" />
-                  <TextField fx:id="createProjectTextField" layoutX="543.0" layoutY="197.0" prefHeight="25.0" prefWidth="177.0" promptText="Название проекта" visible="false" />
-                  <Button fx:id="addProjectButton" layoutX="728.0" layoutY="197.0" mnemonicParsing="false" onAction="#addProject" text="Создать" visible="false" />
-                  <Button fx:id="startProject" layoutX="728.0" layoutY="231.0" mnemonicParsing="false" text="Выбрать" visible="false" />
-                  <Button fx:id="deleteProjectButton" layoutX="730.0" layoutY="273.0" mnemonicParsing="false" onAction="#deleteElementProject" text="Удалить" visible="false" />
-                  <TableView fx:id="projectTableView" layoutX="543.0" layoutY="231.0" prefHeight="200.0" prefWidth="177" visible="false">
-                    <columns>
-                      <TableColumn fx:id="colNameProject" prefWidth="176.0" text="Проект:" />
-                    </columns>
-                  </TableView>
-               </children>
-            </AnchorPane>
-         </content>
-      </Tab>
         <Tab text="Проект">
             <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
@@ -59,15 +40,15 @@
                         <TextField fx:id="roomSelectBathRoomTextField" layoutX="664.0" layoutY="161.0" prefHeight="25.0" prefWidth="42.0" visible="false" />
                         <Button fx:id="addRoomButton" layoutX="713.0" layoutY="161.0" mnemonicParsing="false" onAction="#addRoom" text="+" visible="false" />
 
-                        <Button fx:id="createProjectButton2" layoutX="425.0" layoutY="197.0" mnemonicParsing="false" onAction="#createProject2" text="Создать проект" />
-                        <Button fx:id="selectProjectButton2" layoutX="423.0" layoutY="231.0" mnemonicParsing="false" onAction="#selectProject2" text="Выбрать проект" />
-                        <TextField fx:id="createProjectTextField2" layoutX="543.0" layoutY="197.0" prefHeight="25.0" prefWidth="177.0" promptText="Название проекта" visible="false" />
-                        <Button fx:id="addProjectButton2" layoutX="728.0" layoutY="197.0" mnemonicParsing="false" onAction="#addProject2" text="Создать" visible="false" />
-                        <Button fx:id="startProject2" layoutX="728.0" onAction="#selectProject22" layoutY="231.0" mnemonicParsing="false" text="Выбрать" visible="false" />
-                        <Button fx:id="deleteProjectButton2" layoutX="730.0" layoutY="273.0" mnemonicParsing="false" onAction="#deleteElementProject2" text="Удалить" visible="false" />
-                        <TableView fx:id="projectTableView2" layoutX="543.0" layoutY="231.0" prefHeight="200.0" prefWidth="177" visible="false">
+                        <Button fx:id="createProjectButton" layoutX="425.0" layoutY="197.0" mnemonicParsing="false" onAction="#createProject" text="Создать проект" />
+                        <Button fx:id="selectProjectButton" layoutX="423.0" layoutY="231.0" mnemonicParsing="false" onAction="#selectProject" text="Выбрать проект" />
+                        <TextField fx:id="createProjectTextField" layoutX="543.0" layoutY="197.0" prefHeight="25.0" prefWidth="177.0" promptText="Название проекта" visible="false" />
+                        <Button fx:id="addProjectButton" layoutX="728.0" layoutY="197.0" mnemonicParsing="false" onAction="#addProject" text="Создать" visible="false" />
+                        <Button fx:id="startProject" layoutX="728.0" onAction="#chooseProject" layoutY="231.0" mnemonicParsing="false" text="Выбрать" visible="false" />
+                        <Button fx:id="deleteProjectButton" layoutX="730.0" layoutY="273.0" mnemonicParsing="false" onAction="#deleteElementProject" text="Удалить" visible="false" />
+                        <TableView fx:id="projectTableView" layoutX="543.0" layoutY="231.0" prefHeight="200.0" prefWidth="177" visible="false">
                             <columns>
-                                <TableColumn fx:id="colNameProject2" prefWidth="176.0" text="Проект:" />
+                                <TableColumn fx:id="colNameProject" prefWidth="176.0" text="Проект:" />
                             </columns>
                         </TableView>
                     </children>
