--- a/src/sample/EditProject.fxml
+++ b/src/sample/EditProject.fxml
@@ -27,7 +27,7 @@
                         <Button fx:id="addPaymentButton" layoutX="14.0" layoutY="118.0" mnemonicParsing="false" onAction="#test" prefHeight="26.0" prefWidth="353.0" text="+ Добавить этап оплаты" visible="false" />
                   <Button fx:id="deleteRoomButton" layoutX="375.0" layoutY="195.0" mnemonicParsing="false" onAction="#deleteRoomElement" prefHeight="25.0" prefWidth="75.0" text="Удалить" visible="false" />
                   <Button fx:id="saveRoomButton" layoutX="376.0" layoutY="228.0" mnemonicParsing="false" onAction="#saveRoomElement" text="Сохранить" visible="false" />
-                  <Button fx:id="backRoomButton" onAction="#backProject" layoutX="376.0" layoutY="260.0" mnemonicParsing="false" text="Назад" visible="false" />
+                  <Button fx:id="backRoomButton" onAction="#backProject" layoutX="376.0" layoutY="260.0" mnemonicParsing="false" text="На главную" visible="false" />
                         <TableView fx:id="roomTableView" layoutX="14.0" layoutY="160.0" onMouseClicked="#On_tabCalculatorClickedActionRoom" prefHeight="200.0" prefWidth="353.0" visible="false">
                       <columns>
                          <TableColumn fx:id="colNameRoom" prefWidth="185.0" text="Помещение" />
@@ -46,7 +46,7 @@
                         <Button fx:id="addProjectButton" layoutX="728.0" layoutY="197.0" mnemonicParsing="false" onAction="#addProject" text="Создать" visible="false" />
                         <Button fx:id="startProject" layoutX="728.0" onAction="#chooseProject" layoutY="231.0" mnemonicParsing="false" text="Выбрать" visible="false" />
                         <Button fx:id="deleteProjectButton" layoutX="730.0" layoutY="273.0" mnemonicParsing="false" onAction="#deleteElementProject" text="Удалить" visible="false" />
-                        <TableView fx:id="projectTableView" layoutX="543.0" layoutY="231.0" prefHeight="200.0" prefWidth="177" visible="false">
+                        <TableView fx:id="projectTableView" layoutX="543.0" layoutY="231.0" prefHeight="130.0" prefWidth="177" visible="false" >
                             <columns>
                                 <TableColumn fx:id="colNameProject" prefWidth="176.0" text="Проект:" />
                             </columns>
